--- a/woocommerce-theme/src/app.scss
+++ b/woocommerce-theme/src/app.scss
@@ -1,3 +1,37 @@
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'colours';
 @import 'header';
+
+#hero {
+    height: 300px;
+
+    @media screen and (min-width: 768px) {
+        height: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        height: 550px;
+    }
+
+
+    width: 100%;
+    background: url('images/fashion-2.jpg') #f0f0f0;
+    background-size: cover;
+    h1 {
+        color: $light;
+    }
+}
+
+.main-container {
+    padding: 2rem 0;
+}
+
+.content {
+    padding: 3rem 0;
+}
+
+footer {
+    height: 300px;
+    width: 100%;
+    background: #f0f0f0;
+}
